# sankhyaakaara

./: .gitignore  README.md  api.py  app.py  components.py  converter.py  languages.py  main.py  numerals.py  pyproject.toml  requirements.txt  sandhi.py  setup.py  test.txt  ui_text.yml
data/: large.csv  sandhi.csv  two_digit.csv
sankhyaakaara/: __init__.py  components.py  converter.py  sandhi.py
